...
            "state" : "translated",
            "value" : "Phía trước"
          }
        }
      }
    },
    "Alert distance" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Alert distance"
          }
...
            "state" : "translated",
            "value" : "Chụp"
          }
        }
      }
    },
    "Capture document" : {
      "extractionState" : "stale",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Capture document"
...
            "state" : "translated",
            "value" : "Nhận dạng vật thể"
          }
        }
      }
    },
    "Keep reading" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Keep reading"
          }
...
            "state" : "translated",
            "value" : "Tiếp theo"
          }
        }
      }
    },
    "No camera is available on this device." : {
      "extractionState" : "stale",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "No camera is available on this device."
...
            "state" : "translated",
            "value" : "Trên thiết bị"
          }
        }
      }
    },
    "One photo at a time" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "One photo at a time"
          }
...
            "state" : "translated",
            "value" : "Nhà cung cấp"
          }
        }
      }
    },
    "Pulse faster as things get nearer" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Pulse faster as things get nearer"
          }
...
            "state" : "translated",
            "value" : "Đọc tài liệu"
          }
        }
      }
    },
    "Read from the beginning" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Read from the beginning"
          }
...
